--- a/homepage/stylehp.css
+++ b/homepage/stylehp.css
@@ -130,33 +130,53 @@ h3 {
   border: 4px solid #08caef; /* Add border with the specified color */
 }
 
-/* Footer */
+/*footer*/
 .footer {
   background: #08caef;
   color: #000;
   padding: 20px 0;
   text-align: center;
+  position: relative;
+  font-size: 14px;
 }
 
-.footer .logos {
+.footer-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.description {
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.logos {
   display: flex;
   justify-content: center;
   gap: 20px;
   margin-bottom: 15px;
 }
 
-.footer .footer-logo {
+.footer-logo {
   height: 60px;
 }
 
-.footer .social-link {
-  margin: 0 10px;
-  font-size: 20px;
-  color: #000;
-  transition: transform 0.3s, color 0.3s;
+.social-media {
+  margin-bottom: 15px;
 }
 
-.footer .social-link:hover {
+.social-media p {
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+.social-link:hover {
   transform: scale(1.2);
-  color: #007bff;
+}
+
+.social-media a {
+  width: 20px;
+  height: 20px;
 }
